[DUOS-1768][risk=no] Filter Dataset Count on Chair Console (#1600)
* Updated logic and arguments for addDatasetsToCollections to now accept an optional list of datasetIds to filter on when provided. This is done by finding the intersection between the dataset ids from the collections' dars and the provided list of ids to filter on.

* Updated getCollectionsByUserDacs to take an additional boolean argument to specify whether we should filter on user DAC Datasets. When true, the function passes a list of dataset ids from the datasets returned by findDatasetsByAuthUserEmail for the user.

# Updated the getCollectionsForUserByRoleName function to enable filtering by user DAC datasets for the Chairperson and Member roles so that the Chair and Member consoles show the correct number of datasets that the user has access to.

* Updated other calls to addDatasetsToCollections to pass in an empty list.

* Added a new test under DarCollectionServiceTest to test the filtering logic in addDatasetsToCollections.